--- a/nginx.conf
+++ b/nginx.conf
@@ -4,10 +4,10 @@ server {
 	root /var/www/html;
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name ~^(.*)\.sub\.domain\.com$;
+	server_name ~^(.*)\.sub\.domain\.com$; // your domain sub.domain.com
 
 	location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://localhost:8080; // node http server address
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
